--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 #logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 
-spring.h2.console.enabled=true
+# spring.h2.console.enabled=true
 
-#Integracja z baza H2 - tutorial
-#https://www.youtube.com/watch?v=PSrHcCwvfVQ&t=208s
+#Database
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/car_rental?serverTimezone=Europe/Warsaw
+spring.datasource.username=car_rental_user
+spring.datasource.password=carrental500
+
