--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,21 @@
-#logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
+# Hikari logs
+# logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 
-# spring.h2.console.enabled=true
+# H2 Database
 
-#Database
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/car_rental?serverTimezone=Europe/Warsaw
-spring.datasource.username=car_rental_user
-spring.datasource.password=carrental500
+spring.h2.console.enabled=true
 
+# My SQL Database
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database=mysql
+#spring.datasource.url=jdbc:mysql://localhost:3306/car_rental?serverTimezone=Europe/Warsaw
+#spring.datasource.username=car_rental_user
+#spring.datasource.password=carrental500
+
+
+# Access for local network config
+
+server.port = 8080
+server.address = 192.168.8.150
+spring.h2.console.settings.web-allow-others = true
