--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Hikari logs
-# logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
+ logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 
 # H2 Database
 
@@ -7,15 +7,14 @@ spring.h2.console.enabled=true
 
 # My SQL Database
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database=mysql
-#spring.datasource.url=jdbc:mysql://localhost:3306/car_rental?serverTimezone=Europe/Warsaw
-#spring.datasource.username=car_rental_user
-#spring.datasource.password=carrental500
-
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.database=mysql
+# spring.datasource.url=jdbc:mysql://localhost:3306/car_rental?serverTimezone=Europe/Warsaw
+# spring.datasource.username=car_rental_user
+# spring.datasource.password=carrental500
 
 # Access for local network config
 
-server.port = 8080
-server.address = 192.168.8.150
-spring.h2.console.settings.web-allow-others = true
+ server.port = 8080
+ server.address = 192.168.8.150
+ spring.h2.console.settings.web-allow-others = true
